ocp-infra/base/forecastle/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stakater-forecastle
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
    argocd.argoproj.io/sync-wave: "-1"
    openshift.io/node-selector: "node-role.kubernetes.io/infra="
