ocp-infra/base/forecastle/deployment.yaml
---
# Source: forecastle/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: forecastle
    group: com.stakater.platform
    provider: stakater
    version: "v1.0.76"
    chart: "forecastle-v1.0.76"
    release: "forecastle"
    heritage: "Helm"
  name: forecastle
  namespace: stakater-forecastle
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: forecastle
      group: com.stakater.platform
      provider: stakater
  template:
    metadata:
      labels:
        app: forecastle
        group: com.stakater.platform
        provider: stakater
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: "stakater/forecastle:v1.0.76"
        name: forecastle
        volumeMounts:
        - name: forecastle-config
          mountPath: /etc/forecastle
      volumes:
      - name: forecastle-config
        configMap:
          name: forecastle
      serviceAccountName: forecastle
