ocp-infra/base/forecastle/service.yaml
---
# Source: forecastle/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: forecastle
    group: com.stakater.platform
    provider: stakater
    version: "v1.0.76"
    chart: "forecastle-v1.0.76"
    release: "forecastle"
    heritage: "Helm"
    expose: "true"
  name: forecastle
  namespace: stakater-forecastle
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: forecastle
    group: com.stakater.platform
    provider: stakater
